--- a/Centroid Tracker.ipynb
+++ b/Centroid Tracker.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,39 +39,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[((243, 233), 1.0, 0), ((105, 130), 0.6387085137085138, 0), ((220, 274), 1.0, 1), ((134, 57), 1.0, 1), ((309, 285), 0.19282998370450843, 2), ((209, 97), 0.7678346810422282, 2), ((279, 332), 1.0, 3), ((209, 137), 1.0, 3), ((165, 318), 0.3431251105998938, 4), ((248, 178), 1.0, 4), ((119, 319), 1.0, 5), ((270, 143), 1.0, 5), ((154, 266), 0.9871566179093828, 6), ((290, 94), 0.11809761311008193, 6), ((175, 231), 1.0, 7), ((243, 156), 1.0, 7), ((256, 204), 1.0, 8), ((175, 182), 1.0, 8), ((279, 285), 1.0, 9), ((226, 108), 1.0, 9)]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "overlaps = getOverlap('test_stack.tif','protein.png',False)\n",
-    "print(overlaps)"
+    "def distance(x,y):  \n",
+    "     dist = math.sqrt((x[0][0] - y[0][0])**2 + (x[0][1] - y[0][1])**2)  \n",
+    "     return dist "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[((243, 233), 1.0, 0), ((220, 274), 1.0, 1), ((309, 285), 0.19282998370450843, 2), ((279, 332), 1.0, 3), ((165, 318), 0.3431251105998938, 4), ((119, 319), 1.0, 5), ((154, 266), 0.9871566179093828, 6), ((175, 231), 1.0, 7), ((175, 182), 1.0, 8), ((226, 108), 1.0, 9)], [((105, 130), 0.6387085137085138, 0), ((134, 57), 1.0, 1), ((209, 97), 0.7678346810422282, 2), ((209, 137), 1.0, 3), ((248, 178), 1.0, 4), ((270, 143), 1.0, 5), ((290, 94), 0.11809761311008193, 6), ((243, 156), 1.0, 7), ((256, 204), 1.0, 8), ((279, 285), 1.0, 9)]]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "def distance(x,y):  \n",
-    "     dist = math.sqrt((x[0][0] - y[0][0])**2 + (x[0][1] - y[0][1])**2)  \n",
-    "     return dist \n",
+    "\n",
     "cells = []\n",
     "numCells = 0\n",
     "curr = 1\n",
@@ -103,13 +87,12 @@
     "        if len(using)!=0:\n",
     "            for c in using:\n",
     "                cells.append([c])\n",
-    "        using.append(x)\n",
-    "print(cells)"
+    "        using.append(x)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -185,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
