--- a/Cell Tracker.ipynb
+++ b/Cell Tracker.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -44,32 +44,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 43,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "Cell() takes no arguments",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-16-c1d174363096>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      8\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mx\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      9\u001b[0m             \u001b[0mpos\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mx\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 10\u001b[0;31m             \u001b[0mc\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mCell\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mchr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mname\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mpos\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     11\u001b[0m             \u001b[0mcells\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mc\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     12\u001b[0m             \u001b[0mname\u001b[0m \u001b[0;34m+=\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mTypeError\u001b[0m: Cell() takes no arguments"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#Initialize a list that will eventually hold the overlap data for each cell as it travels through the stack\n",
     "cells = []\n",
     "curr = 0\n",
     "count = 0\n",
     "name = 65\n",
-    "for x in overlaps:\n",
+    "index = -1\n",
+    "while index < len(overlaps)-1:\n",
+    "    index += 1\n",
+    "    #print(\"loop\")\n",
+    "    x = overlaps[index]\n",
     "    if x[2] == curr:\n",
+    "        #print(\"if\")\n",
     "        if x[2] == 0:\n",
+    "            #print(\"0\")\n",
     "            pos = x[0]\n",
     "            c = Cell(chr(name),0,pos)\n",
+    "            c.used = True\n",
     "            cells.append(c)\n",
     "            name += 1\n",
     "            continue\n",
@@ -78,25 +73,211 @@
     "        i = 0\n",
     "        for c in cells:\n",
     "            if c.used or c.gone:\n",
+    "                #print(\"used\")\n",
+    "                i+=1\n",
     "                continue\n",
-    "            dist = distance(c.last,x[0])\n",
+    "            #print(\"not used\")\n",
+    "            dist = distance([c.last],x)\n",
     "            if dist < best:\n",
     "                best = dist\n",
     "                dex = i\n",
     "            i += 1\n",
-    "        c[dex].history.append(x[0])\n",
-    "        c.used = True\n",
+    "        #print(\"post used\")\n",
+    "        #print(\"dex = \" + str(dex))\n",
+    "        cell = cells[dex]\n",
+    "        cell.history.append(x[0])\n",
+    "        cell.used = True\n",
     "        if best == 999999:\n",
-    "            n = \"New\" + char(name)\n",
+    "            #print(\"new\")\n",
+    "            n = \"New\" + chr(name)\n",
     "            c = Cell(n, curr, x[0])\n",
+    "            c.used = True\n",
+    "            cells.append(c)\n",
     "            name += 1\n",
     "    else:\n",
+    "        #print(\"else\")\n",
     "        for c in cells:\n",
-    "            if c.used or c.gone:\n",
+    "            if c.used:\n",
+    "                #print(\"reset\")\n",
+    "                c.used = False\n",
+    "            elif c.gone:\n",
+    "                #print(\"gone\")\n",
     "                continue\n",
-    "            c.gone = True\n",
+    "            else:\n",
+    "                #print(\"now gone\")\n",
+    "                c.gone = True\n",
     "        curr += 1\n",
-    "        name = 65"
+    "        name = 65\n",
+    "        index -= 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Cell A:\n",
+      "Frame 0: (219, 203)\n",
+      "\n",
+      "Frame 1: (206, 199)\n",
+      "\n",
+      "Frame 2: (211, 205)\n",
+      "\n",
+      "Frame 3: (210, 197)\n",
+      "\n",
+      "Frame 4: (212, 197)\n",
+      "\n",
+      "Frame 5: (214, 194)\n",
+      "\n",
+      "Frame 6: (225, 196)\n",
+      "\n",
+      "Frame 7: (193, 176)\n",
+      "\n",
+      "Frame 8: (226, 183)\n",
+      "\n",
+      "Frame 9: (231, 178)\n",
+      "\n",
+      "Frame 10: (143, 139)\n",
+      "\n",
+      "Frame 11: (228, 153)\n",
+      "\n",
+      "Frame 12: (223, 141)\n",
+      "\n",
+      "Frame 13: (220, 123)\n",
+      "\n",
+      "Frame 14: (214, 114)\n",
+      "\n",
+      "Frame 15: (228, 115)\n",
+      "\n",
+      "Frame 16: (230, 130)\n",
+      "\n",
+      "Frame 17: (226, 135)\n",
+      "\n",
+      "Frame 18: (233, 117)\n",
+      "\n",
+      "Frame 19: (231, 106)\n",
+      "\n",
+      "Frame 20: (235, 101)\n",
+      "\n",
+      "Frame 21: (232, 94)\n",
+      "\n",
+      "Frame 22: (227, 108)\n",
+      "\n",
+      "Frame 23: (228, 132)\n",
+      "\n",
+      "Frame 24: (229, 125)\n",
+      "\n",
+      "Frame 25: (232, 119)\n",
+      "\n",
+      "Frame 26: (226, 109)\n",
+      "\n",
+      "Frame 27: (220, 93)\n",
+      "\n",
+      "Frame 28: (226, 99)\n",
+      "\n",
+      "Frame 29: (224, 97)\n",
+      "\n",
+      "Frame 30: (221, 110)\n",
+      "\n",
+      "Frame 31: (221, 105)\n",
+      "\n",
+      "Frame 32: (223, 105)\n",
+      "\n",
+      "Frame 33: (226, 110)\n",
+      "\n",
+      "Frame 34: (228, 95)\n",
+      "\n",
+      "Frame 35: (223, 99)\n",
+      "\n",
+      "Frame 36: (225, 97)\n",
+      "\n",
+      "Frame 37: (224, 93)\n",
+      "\n",
+      "Frame 38: (223, 90)\n",
+      "\n",
+      "Frame 39: (220, 90)\n",
+      "\n",
+      "Frame 40: (217, 92)\n",
+      "\n",
+      "Cell NewA:\n",
+      "Frame 6: (193, 176)\n",
+      "\n",
+      "Frame 7: (181, 164)\n",
+      "\n",
+      "Frame 8: (169, 157)\n",
+      "\n",
+      "Frame 9: (228, 166)\n",
+      "\n",
+      "Frame 10: (113, 150)\n",
+      "\n",
+      "Frame 11: (109, 163)\n",
+      "\n",
+      "Frame 12: (99, 181)\n",
+      "\n",
+      "Frame 13: (92, 179)\n",
+      "\n",
+      "Frame 14: (115, 179)\n",
+      "\n",
+      "Frame 15: (133, 175)\n",
+      "\n",
+      "Frame 16: (128, 174)\n",
+      "\n",
+      "Frame 17: (113, 209)\n",
+      "\n",
+      "Frame 18: (112, 229)\n",
+      "\n",
+      "Frame 19: (110, 217)\n",
+      "\n",
+      "Frame 20: (108, 214)\n",
+      "\n",
+      "Frame 21: (120, 206)\n",
+      "\n",
+      "Frame 22: (115, 199)\n",
+      "\n",
+      "Frame 23: (121, 203)\n",
+      "\n",
+      "Frame 24: (116, 196)\n",
+      "\n",
+      "Frame 25: (117, 192)\n",
+      "\n",
+      "Frame 26: (104, 206)\n",
+      "\n",
+      "Frame 27: (103, 216)\n",
+      "\n",
+      "Frame 28: (108, 203)\n",
+      "\n",
+      "Frame 29: (121, 210)\n",
+      "\n",
+      "Frame 30: (113, 213)\n",
+      "\n",
+      "Frame 31: (111, 212)\n",
+      "\n",
+      "Frame 32: (107, 204)\n",
+      "\n",
+      "Frame 33: (116, 207)\n",
+      "\n",
+      "Frame 34: (121, 211)\n",
+      "\n",
+      "Frame 35: (125, 210)\n",
+      "\n",
+      "Frame 36: (124, 211)\n",
+      "\n",
+      "Frame 37: (121, 209)\n",
+      "\n",
+      "Frame 38: (122, 207)\n",
+      "\n",
+      "Frame 39: (121, 210)\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "for cell in cells:\n",
+    "    cell.displayData()"
    ]
   },
   {
