--- a/cellClass.ipynb
+++ b/cellClass.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,14 +14,22 @@
     "        self.gone = False\n",
     "        self.start = frame\n",
     "        self.history = []\n",
-    "        history.append(pos)\n",
+    "        self.history.append(pos)\n",
     "    def displayData(self):\n",
     "        print(\"Cell \" + self.name + \":\")\n",
     "        i = self.start\n",
     "        for c in self.history:\n",
     "            print(\"Frame \" + i + \": \" + c)\n",
+    "            i+= 1\n",
     "        "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
